add workout templates endpoints
