# src/adapters/routes/users.ts
@@ -3,6 +3,9 @@ import { UserRepositoryImpl } from '@infrastructure/repositories/UserRepositoryI
 import { UserService } from '@application/services/UserService'
 import { UserController } from '@adapters/controllers/UserController'
 import { AuthService } from '@application/services/AuthService'
+import { WorkoutTemplateRepositoryImpl } from '@infrastructure/repositories/WorkoutTemplateRepositoryImpl'
+import { WorkoutTemplateService } from '@application/services/WorkoutTemplateService'
+import { WorkoutTemplateController } from '@adapters/controllers/WorkoutTemplateController'
 
 export const usersRouter = express.Router() 
 
@@ -10,6 +13,10 @@ const userRepository = new UserRepositoryImpl()
 const userService = new UserService(userRepository)
 const authService = new AuthService(userRepository)
 const userController = new UserController(userService, authService)
+
+const workoutTemplateRepository = new WorkoutTemplateRepositoryImpl()
+const workoutTemplateService = new WorkoutTemplateService(workoutTemplateRepository)
+const workoutTemplateController = new WorkoutTemplateController(workoutTemplateService)
 
 usersRouter.get('/:id', (res: Request, req: Response, next: NextFunction) => {
   /*  
@@ -56,4 +63,44 @@ usersRouter.delete('/:id', (req: Request, res: Response, next: NextFunction) => 
   #swagger.security = [{"bearerAuth": []}]
 */
   userController.deleteUser(req, res, next)
+})
+
+usersRouter.get('/:id/workout-templates', (req: Request, res: Response, next: NextFunction) => {
+  /*  
+  #swagger.tags = ['Workout Template']
+  #swagger.responses[200] = { schema:{ $ref: "#/definitions/AllWorkoutTemplates" } }
+  #swagger.security = [{"bearerAuth": []}]
+*/
+  workoutTemplateController.getAllWorkoutTemplatesByUserId(req, res, next)
+})
+
+usersRouter.get('/:id/workout-templates/:templateId', (req: Request, res: Response, next: NextFunction) => {
+  /*  
+    #swagger.tags = ['Workout Template']
+    #swagger.responses[200] = { schema:{ $ref: "#/definitions/WorkoutTemplate" } }
+    #swagger.security = [{"bearerAuth": []}]
+  */
+
+  workoutTemplateController.getWorkoutTemplatesById(req, res, next)
+})
+
+usersRouter.post('/:id/workout-templates', (req: Request, res: Response, next: NextFunction) => {
+  /*  
+    #swagger.tags = ['Workout Template']
+    #swagger.requestBody = { required: true, schema: { $ref: "#/definitions/CreateWorkoutTemplateBody" } }
+    #swagger.responses[200] = { schema:{ $ref: "#/definitions/WorkoutTemplate" } }
+    #swagger.security = [{"bearerAuth": []}]
+  */
+
+  workoutTemplateController.getWorkoutTemplatesById(req, res, next)
+})
+
+usersRouter.delete('/:id/workout-templates/:templateId', (req: Request, res: Response, next: NextFunction) => {
+  /*  
+    #swagger.tags = ['Workout Template']
+    #swagger.responses[200] = { }
+    #swagger.security = [{"bearerAuth": []}]
+  */
+
+  workoutTemplateController.deleteWorkoutTemplate(req, res, next)
 })
