# src/application/services/dto/workoutTemplate.dto.ts
@@ -1,0 +1,13 @@
+
+interface CreateWorkoutTemplateExerciseDTO {
+  sets?: number
+  reps?: number
+  weight?: number
+  exercise_id: string
+}
+
+export interface CreateWorkoutTemplateDTO {
+  user_id: string
+  name: string
+  exercises?: CreateWorkoutTemplateExerciseDTO[]
+}
